making final edits